--- a/e-commerce/src/main/resources/application.properties
+++ b/e-commerce/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/Inventory
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 server.port=8080
+logging.level.org.springframework.jdbc.core=TRACE
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
