--- a/e-commerce/src/main/resources/application.properties
+++ b/e-commerce/src/main/resources/application.properties
@@ -10,5 +10,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.security.user.name=admin
-spring.security.user.password=admin
+logging.level.org.springframework.jdbc.core=TRACE
+
+#spring.security.user.name=admin
+#spring.security.user.password=admin
