--- a/e-commerce/src/main/resources/application.properties
+++ b/e-commerce/src/main/resources/application.properties
@@ -12,5 +12,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.jdbc.core=TRACE
 
-#spring.security.user.name=admin
-#spring.security.user.password=admin
+spring.security.user.name=admin
+spring.security.user.password=admin
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
